add question and comment init
添加一个话题功能基本完成，揭下来是评论模块，将原来对接数据库的模块改gorm 提高了效率

--- a/my-vue-app/src/style.css
+++ b/my-vue-app/src/style.css
@@ -71,7 +71,7 @@ button:focus-visible {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 10em;
   text-align: center;
 }
 
